--- a/h4.html
+++ b/h4.html
@@ -10,7 +10,6 @@
     <title>นิธิทัศน์ โปรดักชั่น</title>
     <style>
       body {
-          text-align: center;
           background-image: url('background.jpg');
           background-size: cover;
       }
@@ -65,7 +64,7 @@
         </div>
         <div class="content">
           <div class="title-container">
-            <img src="/images/รูปค่ายเพลงนิธิ.jpg" alt="Nithitad Records Logo">
+            <img src="images/รูปค่ายเพลงนิธิ.jpg" alt="Nithitad Records Logo">
             <h1>ตัวอย่างเพลงค่าย นิธิทัศน์ โปรโมชั่น</h1>
         </div>
         <table>
@@ -77,7 +76,7 @@
                 <td class="band-name"><span class="black">วง<br></span> <span class="red">ชาตรี</span></td>
                 <td>
                     <video width="300" height="250" controls>
-                        <source src="/videos/ดอกไม้ป่า.mp4" type="video/mp4">
+                        <source src="videos/ดอกไม้ป่า.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </td>
@@ -86,7 +85,7 @@
                 <td class="band-name"><span class="red">คณะ<br></span> <span class="black">ดอกไม้ป่า</span></td>
                 <td>
                     <video width="300" height="250" controls>
-                        <source src="/videos/ชาตรี.mp4" type="video/mp4">
+                        <source src="videos/ชาตรี.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
                 </td>
